# data-analysis-with-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
demographic_data_analyser/: demographic_data_analyzer.ipynb  demographic_data_analyzer.py  test_module.py
mean_Variance_standard_deviation_calculator/: mean_var_std.py  test_module.py
medical_data_visualizer/: medical_data_visualizer.ipynb  medical_data_visualizer.py
page_view_time_series_visualizer/: test_module.py  time_series_visualizer.ipynb  time_series_visualizer.py
sea_level_predictor/: sea_level_predictor.py  test_module.py
