[tool.poetry]
name = "data_analysis_with_python"
version = "0.1.0"
description = "Project solutions for freeCodeCamp's Data Analysis with Python projects"
authors = ["Maurice de Bruyn <debruyn.maurice@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.3"
pandas = "^1.1.4"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
jupyterlab = "^2.2.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
